[package]
name = "dungeonbawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bracket-lib = "0.8.1"
legion = "0.3.1"

[lints.clippy]
new-ret-no-self = "allow"
wrong-self-convention = "allow"
borrowed-box = "allow"
